# obliterator

./: .gitignore  CLAUDE.md  CMakeLists.txt  build-aax.sh  build-all.sh  build-au.sh  build-run.sh  build-vst3.sh
.cache/clangd/index/: AlternateSet.hh.32EA4F67014B94BD.idx  AlternateSet.hh.644BA931D69B7453.idx  AlternateSet.hh.FF360D8CA9F04768.idx  AlternateSubst.hh.03AA4C5E6DB967A9.idx  AlternateSubst.hh.1F8A731A925B4853.idx  AlternateSubst.hh.A7A9573FD9D62FDF.idx  AlternateSubstFormat1.hh.73C0179478AF953E.idx  AlternateSubstFormat1.hh.9B54AF4F1B49EB33.idx  AlternateSubstFormat1.hh.9DB3B29284332DD0.idx  Anchor.hh.6C73B842C4EEB924.idx  Anchor.hh.99FC3F74148EDBFD.idx  Anchor.hh.AA1E9B0DACD01DB1.idx  AnchorFormat1.hh.029A41DF8933878F.idx  AnchorFormat1.hh.08CEFE8CC7056312.idx  AnchorFormat1.hh.1E76C4D2DCA120CA.idx  AnchorFormat2.hh.B93B3F67517D8400.idx  AnchorFormat2.hh.E25A00DED0F2AAA7.idx  AnchorFormat2.hh.F2450B97F4B6B92F.idx  AnchorFormat3.hh.31E320FADA6858E3.idx  AnchorFormat3.hh.7BC8C5956F4C04F5.idx  AnchorFormat3.hh.EAE0ABAC15D4CF8E.idx  AnchorMatrix.hh.7F8D1389FBC14906.idx  AnchorMatrix.hh.9383D47266FF2626.idx  AnchorMatrix.hh.ED36C6925E820D63.idx  BidiChain.c.6FDF567B29D034FD.idx  BidiChain.c.C6738194A49B1FAE.idx  BidiChain.c.D57108C47E9B5417.idx  BidiChain.h.01BA14283A56B301.idx  BidiChain.h.2BF4BEFE44DB78AF.idx  BidiChain.h.99D2FD85ED2FE34B.idx  BidiTypeLookup.c.51D2BFE2BB7D39F5.idx  BidiTypeLookup.c.6F0F5839B5D2852A.idx  BidiTypeLookup.c.F4771820274283EF.idx  BidiTypeLookup.h.05D1870A660CE637.idx  BidiTypeLookup.h.16251A33F7C1CAAD.idx  BidiTypeLookup.h.BD14CF88E1EFC921.idx  BracketQueue.c.10E45D5BFB8038DA.idx  BracketQueue.c.A8ECC4CA50E4D901.idx  BracketQueue.c.AE42BD128607C024.idx  BracketQueue.h.6A17EFD2003FB9E4.idx  (+5092 more)
Source/: DistortionLookAndFeel.cpp  DistortionLookAndFeel.h  OscilloscopeComponent.cpp  OscilloscopeComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
